# Sen2Nal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  Dockerfile.frontend  Dockerfile.streamlit  Makefile  PLAN.md  README.md  README_SETUP.md  SEN2NAL_AGENT_PROMPTS.md  SEN2NAL_API_REFERENCE.md  SEN2NAL_CLAUDE_CODE_PROMPTS.md  SEN2NAL_DATABASE_SCHEMA.md  SEN2NAL_DEVELOPMENT_SETUP.md  SEN2NAL_FUTURE_FEATURES.md  SEN2NAL_LEGAL_DISCLAIMER.md  SEN2NAL_MCP_INTEGRATION.md  SEN2NAL_PRD.md  SEN2NAL_TECHNICAL_ARCHITECTURE.md  SEN2NAL_TESTING_STRATEGY.md  TESTING_NOTES.md  alembic.ini  compass_artifact_wf-d94d9aa9-9a91-4b1d-971c-4dfe9985cbce_text_markdown.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: KNOWN_ISSUES.md
docs/adr/: ADR-001-postgresql-star-schema.md  ADR-002-finbert-over-gpt4.md  ADR-003-xgboost-over-lstm.md  ADR-004-batch-over-realtime.md  ADR-005-walk-forward-validation.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/hooks/: useSystemClock.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
infrastructure/: deploy-lightsail.sh  nginx-frontend.conf  nginx.conf
infrastructure/postgres/: init.sql  pg_hba.conf
scripts/: __init__.py  check_dependencies.py  check_setup.py  seed_calendar.py  smoke_test.py
src/: __init__.py  config.py  constants.py
src/agents/: __init__.py  base.py  calendar.py  experiment.py  features.py  ingestion.py  prediction.py  sentiment.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  alerts.py  experiments.py  pipeline.py  stocks.py
src/contracts/: __init__.py  base.py  calendar.py  features.py  ingestion.py  prediction.py  sentiment.py
src/dashboard/: __init__.py  app.py
src/data_quality/: __init__.py  validator.py
src/database/: __init__.py  connection.py  models.py
src/database/migrations/: README  env.py
src/pipeline/: __init__.py  runner.py  scheduler.py
tests/: __init__.py  conftest.py  test_api.py  test_base_agent.py  test_calendar.py  test_contract_enforcement.py  test_ingestion.py  test_models.py  test_pipeline_runner.py  test_pipeline_state.py  test_seed_calendar.py  test_sentiment.py  test_validator.py
(+17 files in other folders)
