[tool.poetry]
name = "sen2nal"
version = "1.0.0"
description = "Stock Sentiment + Calendar Signal Analysis System"
authors = ["Faisal (Mohamad Faisal Bin Mohd Hanafi)"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# API Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

# ML & NLP
transformers = "^4.36.0"
torch = "^2.1.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.0"
# shap = "^0.44.0"  # Moved to optional - requires MSVC build tools

# Data Processing
pandas = "^2.2.0"
numpy = "^2.1.0"
nltk = "^3.8.1"
spacy = "^3.7.2"

# Data Ingestion
requests = "^2.31.0"
aiohttp = "^3.9.1"
praw = "^7.7.1"
yfinance = "^0.2.35"
# beautifulsoup4 = "^4.12.3"  # Requires lxml which needs MSVC
# lxml = "^5.1.0"  # Requires MSVC build tools

# AWS
boto3 = "^1.34.25"

# Scheduling
apscheduler = "^3.10.4"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
playwright = "^1.40.0"

# Code Quality
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
isort = "^5.13.2"

# Development
ipython = "^8.20.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --cov-fail-under=40"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "browser: marks tests that require browser automation",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
